--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
         <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/1.%20Arrival/Skyline.jpg" alt="Unstable internet, please refresh the browser">
         <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/1.%20Arrival/Reception-1.jpg" alt="Unstable internet, please refresh the browser">
+        <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/1.%20Arrival/Flag.jpg" alt="Unstable internet, please refresh the browser">
      
 
      
