--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
         <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/1.%20Arrival/Orchestra-2.jpg" alt="Unstable internet, please refresh the browser">
         <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/1.%20Arrival/Orchestra-3.jpg" alt="Unstable internet, please refresh the browser">
 
-        <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/1.%20Arrival/Orchestra-3.jpg" alt="Unstable internet, please refresh the browser">
+        <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/1.%20Arrival/Message-1.jpg" alt="Unstable internet, please refresh the browser">
+        <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/1.%20Arrival/Message-2.jpg" alt="Unstable internet, please refresh the browser">
+        <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/1.%20Arrival/Message-3.jpg" alt="Unstable internet, please refresh the browser">
 
 
         <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/1.%20Arrival/Convoy-1.jpg" alt="Unstable internet, please refresh the browser">
