--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/Presidential%20Palace/9.jpg" alt="Unstable internet, please refresh the browser"> 
         <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/Presidential%20Palace/11.jpg" alt="Unstable internet, please refresh the browser">
 
-<img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/Presidential%20Palace/11.jpg" alt="Unstable internet, please refresh the browser">
+<img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/Presidential%20Palace/8-1.jpg" alt="Unstable internet, please refresh the browser">
 
          <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/Presidential%20Palace/7.jpg" alt="Unstable internet, please refresh the browser"> 
         <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/Presidential%20Palace/8.jpg" alt="Unstable internet, please refresh the browser"> 
