--- a/index.html
+++ b/index.html
@@ -11,13 +11,12 @@
 
 
 
-        <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/Presidential%20Palace/1.png" alt="Unstable internet, please refresh the browser"> 
-        <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/Presidential%20Palace/2.jpg" alt="Unstable internet, please refresh the browser">  
+        <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/Presidential%20Palace/NEW%20PALACE/1.jpg" alt="Unstable internet, please refresh the browser"> 
+        <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/Presidential%20Palace/NEW%20PALACE/2.jpg" alt="Unstable internet, please refresh the browser">  
 
-
-        <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/Presidential%20Palace/4.jpg" alt="Unstable internet, please refresh the browser">
+        <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/Presidential%20Palace/NEW%20PALACE/4.jpg" alt="Unstable internet, please refresh the browser">
            <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/Presidential%20Palace/5.jpg" alt="Unstable internet, please refresh the browser">
-           
+
          <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/Presidential%20Palace/8-1.jpg" alt="Unstable internet, please refresh the browser">
         <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/Presidential%20Palace/3.jpg" alt="Unstable internet, please refresh the browser"> 
 
