--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
        <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/3.%20Conference%20Day%20-%201/4.jpg" alt="Unstable internet, please refresh the browser"> 
        <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/3.%20Conference%20Day%20-%201/5.jpg" alt="Unstable internet, please refresh the browser">
        <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/3.%20Conference%20Day%20-%201/6.jpg" alt="Unstable internet, please refresh the browser"> 
+       <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/3.%20Conference%20Day%20-%201/7.jpg" alt="Unstable internet, please refresh the browser"> 
+       <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/3.%20Conference%20Day%20-%201/8.jpg" alt="Unstable internet, please refresh the browser"> 
+       <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/3.%20Conference%20Day%20-%201/9.jpg" alt="Unstable internet, please refresh the browser"> 
 
 
 
