--- a/index.html
+++ b/index.html
@@ -23,10 +23,13 @@
         <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/Presidential%20Palace/NEW%20PALACE/11.jpg" alt="Unstable internet, please refresh the browser">
         <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/Presidential%20Palace/NEW%20PALACE/7.jpg" alt="Unstable internet, please refresh the browser"> 
         <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/Presidential%20Palace/NEW%20PALACE/8.jpg" alt="Unstable internet, please refresh the browser"> 
+
+
+        <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/Presidential%20Palace/NEW%20PALACE/8.jpg" alt="Unstable internet, please refresh the browser"> 
         
 
 
-
+        <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/1.%20Arrival/Skyline.jpg" alt="Unstable internet, please refresh the browser">
        <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/3.%20Conference%20Day%20-%201/1.jpg" alt="Unstable internet, please refresh the browser">
        <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/3.%20Conference%20Day%20-%201/2.jpg" alt="Unstable internet, please refresh the browser"> 
        <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/3.%20Conference%20Day%20-%201/3.jpg" alt="Unstable internet, please refresh the browser">
