--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
         <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/Presidential%20Palace/NEW%20PALACE/8.jpg" alt="Unstable internet, please refresh the browser"> 
 
 
-        <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/Presidential%20Palace/NEW%20PALACE/8.jpg" alt="Unstable internet, please refresh the browser"> 
+        <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/National%20Celebrations/Ishmael-Kiprono.jpg" alt="Unstable internet, please refresh the browser"> 
+        <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/National%20Celebrations/Ishmael-Kipron01-.jpg" alt="Unstable internet, please refresh the browser"> 
         
 
 
