--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
         <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/National%20Celebrations/Ishmael-Kiprono.jpg" alt="Unstable internet, please refresh the browser"> 
         <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/National%20Celebrations/Ishmael-Kipron01-.jpg" alt="Unstable internet, please refresh the browser"> 
+         <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/National%20Celebrations/Ishmael-Kipron01-.jpg" alt="Unstable internet, please refresh the browser"> 
         
 
 
