--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
         <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/National%20Celebrations/BOAZ--1.jpg" alt="Unstable internet, please refresh the browser"> 
         <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/National%20Celebrations/BOAZ--2.jpg" alt="Unstable internet, please refresh the browser"> 
         <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/National%20Celebrations/BOAZ--3.jpg" alt="Unstable internet, please refresh the browser"> 
-        <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/National%20Celebrations/BOAZ--3.jpg" alt="Unstable internet, please refresh the browser"> 
+        <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/National%20Celebrations/Maina.jpg" alt="Unstable internet, please refresh the browser"> 
+        <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/National%20Celebrations/Maina.jpg" alt="Unstable internet, please refresh the browser"> 
         
 
 
