--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
        <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/Healing%20Service/3.jpg" alt="Unstable internet, please refresh the browser"> 
        
        
-       <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/Healing%20Service/3.jpg" alt="Unstable internet, please refresh the browser"> 
+       <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/Healing%20Service/6--CRUTCHES.jpg" alt="Unstable internet, please refresh the browser"> 
+       <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/Healing%20Service/7--CRUTCHES.jpg" alt="Unstable internet, please refresh the browser">
 
 
 
