--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/Healing%20Service/BLIND-1.jpg" alt="Unstable internet, please refresh the browser">
 
         <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/Healing%20Service/DEAF-5.jpg" alt="Unstable internet, please refresh the browser">
+        <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/Healing%20Service/DEAF-6.jpg" alt="Unstable internet, please refresh the browser">
        <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/Healing%20Service/DEAF-1.jpg" alt="Unstable internet, please refresh the browser">
        <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/Healing%20Service/DEAF-2.jpg" alt="Unstable internet, please refresh the browser">
        <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/Healing%20Service/DEAF-3.jpg" alt="Unstable internet, please refresh the browser">
@@ -45,7 +46,7 @@
        <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/Healing%20Service/Shrivelled.jpg" alt="Unstable internet, please refresh the browser">
        <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/Healing%20Service/Shrivelled-1.jpg" alt="Unstable internet, please refresh the browser">
 
-
+        <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/Healing%20Service/Lame-1.jpg" alt="Unstable internet, please refresh the browser">
        <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/Healing%20Service/Lame-1.jpg" alt="Unstable internet, please refresh the browser">
        <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/Healing%20Service/LAME-2.jpg" alt="Unstable internet, please refresh the browser">
        <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/Healing%20Service/LAME-3.jpg" alt="Unstable internet, please refresh the browser">
