--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
        <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/Healing%20Service/Shrivelled.jpg" alt="Unstable internet, please refresh the browser">
        <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/Healing%20Service/Shrivelled-1.jpg" alt="Unstable internet, please refresh the browser">
 
+        <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/Healing%20Service/Hip-1.jpg" alt="Unstable internet, please refresh the browser">
+        <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/Healing%20Service/Hip-1.jpg" alt="Unstable internet, please refresh the browser">
+
 
         <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/Healing%20Service/Lame-5.jpg" alt="Unstable internet, please refresh the browser">
         <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/Healing%20Service/Lame-6.jpg" alt="Unstable internet, please refresh the browser">
@@ -60,9 +63,10 @@
 
 
       <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/Healing%20Service/PROSTATE-PAIN.jpg" alt="Unstable internet, please refresh the browser">
+      <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/Healing%20Service/PROSTATE-PAIN-1.jpg" alt="Unstable internet, please refresh the browser">
 
       <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/Healing%20Service/Spinal-condition.jpg" alt="Unstable internet, please refresh the browser">
-      <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/Healing%20Service/Spinal-condition.jpg" alt="Unstable internet, please refresh the browser">
+      <img class="slideshow" src= "https://pub-9f92551086574e82abebdc7b9c83cf92.r2.dev/Caracas%202025/Healing%20Service/Spinal-condition-1.jpg" alt="Unstable internet, please refresh the browser">
 
       
 
